Problemas con el decifrado del token